--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,9 @@ body {
 	-ms-font-smoothing: antialiased;
 	
 }
+.great-pad {
+	padding-bottom: 27px;
+}
 
 .italic {
 	font-style: italic;
@@ -1325,3 +1328,19 @@ footer ul li {
 }
 
 
+/* Tablet only style */
+@media (min-width:768px) and (max-width:991px) {
+	
+}
+
+/* Mobile only style */
+@media (max-width:767px) {
+	p {
+		font-size: 10px;
+		text-align: left;
+		padding: 0;
+	}
+	.programme-flex {
+		display: block;
+	}
+}
